--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
             <header data-thq="thq-navbar" class="navbar8-navbar-interactive">
               <div data-thq="thq-navbar-nav" class="navbar8-desktop-menu">
                 <nav class="navbar8-links1">
-                  <a href="https://www.teleporthq.io">
+                  <a href="https://www.linkedin.com/in/mosab-aboidrees-altraifi-yousif-041aaa83/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BQAeT4MnhSyWFehYzRgtUWQ%3D%3D">
                     <fragment class="home-fragment104">
                       <span class="home-text104 thq-link thq-body-small">
                         Features
                       </span>
                     </fragment>
                   </a>
-                  <a href="https://www.teleporthq.io">
+                  <a href="https://www.linkedin.com/in/mosab-aboidrees-altraifi-yousif-041aaa83/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BQAeT4MnhSyWFehYzRgtUWQ%3D%3D">
                     <fragment class="home-fragment102">
                       <span class="home-text102 thq-link thq-body-small">
                         About
@@ -80,7 +80,7 @@
                     </fragment>
                   </a>
                   <a
-                    href="https://www.teleporthq.io"
+                    href="https://www.linkedin.com/in/mosab-aboidrees-altraifi-yousif-041aaa83/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BQAeT4MnhSyWFehYzRgtUWQ%3D%3D"
                     target="_blank"
                     rel="noreferrer noopener"
                   >
