--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>About - Milky Thunderous Human</title>
-    <meta property="og:title" content="About - Milky Thunderous Human" />
+    <title>About - TechFolio</title>
+    <meta property="og:title" content="About - TechFolio" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
