--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Contact - Milky Thunderous Human</title>
-    <meta property="og:title" content="Contact - Milky Thunderous Human" />
+    <title>Contact - TechFolio</title>
+    <meta property="og:title" content="Contact - TechFolio" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
