Update all fixes

--- a/contact.html
+++ b/contact.html
@@ -108,11 +108,6 @@
               <div data-thq="thq-mobile-menu" class="navbar8-mobile-menu">
                 <div class="navbar8-nav">
                   <div class="navbar8-top">
-                    <img
-                      alt="Portfolio Logo"
-                      src="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/84ec08e8-34e9-42c7-9445-d2806d156403/fac575ac-7a41-484f-b7ac-875042de11f8?org_if_sml=1&amp;force_format=original"
-                      class="navbar8-logo"
-                    />
                     <div data-thq="thq-close-menu" class="navbar8-close-menu">
                       <svg viewBox="0 0 1024 1024" class="navbar8-icon14">
                         <path
@@ -122,29 +117,23 @@
                     </div>
                   </div>
                   <nav class="navbar8-links2">
-                    <a href="/">
+                    <a href="index.html" class="navbar8-link12">
                       <fragment class="contact-fragment10">
                         <span class="contact-text10 thq-link thq-body-small">
                           Home
                         </span>
                       </fragment>
                     </a>
-                    <a href="/about">
+                    <a href="about.html" class="navbar8-link22">
                       <fragment class="contact-fragment11">
                         <span class="contact-text11 thq-link thq-body-small">
                           About
                         </span>
                       </fragment>
                     </a>
-                    <a
-                      href="https://www.teleporthq.io"
-                      class="navbar8-link3 thq-link thq-body-small"
-                    >
-                      Portfolio
-                    </a>
                     <div class="navbar8-link4-accordion">
                       <div class="navbar8-trigger">
-                        <span>
+                        <a href="contact.html" class="navbar8-link52">
                           <fragment class="contact-fragment12">
                             <span
                               class="contact-text12 thq-link thq-body-small"
@@ -152,21 +141,16 @@
                               Contact
                             </span>
                           </fragment>
-                        </span>
+                        </a>
                         <div class="navbar8-icon-container2">
                           <div class="navbar8-container3">
                             <svg viewBox="0 0 1024 1024" class="navbar8-icon16">
                               <path d="M298 426h428l-214 214z"></path>
                             </svg>
                           </div>
-                          <div class="navbar8-container4">
-                            <svg viewBox="0 0 1024 1024" class="navbar8-icon18">
-                              <path d="M426 726v-428l214 214z"></path>
-                            </svg>
-                          </div>
                         </div>
                       </div>
-                      <div class="navbar8-container5">
+                      <div class="navbar8-container4">
                         <a href="https://www.teleporthq.io">
                           <div class="navbar8-menu-item1">
                             <img
@@ -183,8 +167,8 @@
                                 </fragment>
                               </span>
                               <span>
-                                <fragment class="contact-fragment17">
-                                  <span class="contact-text17 thq-body-small">
+                                <fragment class="contact-fragment16">
+                                  <span class="contact-text16 thq-body-small">
                                     Welcome to my portfolio page showcasing my
                                     work and skills.
                                   </span>
@@ -209,8 +193,8 @@
                                 </fragment>
                               </span>
                               <span>
-                                <fragment class="contact-fragment18">
-                                  <span class="contact-text18 thq-body-small">
+                                <fragment class="contact-fragment17">
+                                  <span class="contact-text17 thq-body-small">
                                     Learn more about me and my background.
                                   </span>
                                 </fragment>
@@ -230,8 +214,8 @@
                                 Portfolio
                               </span>
                               <span>
-                                <fragment class="contact-fragment19">
-                                  <span class="contact-text19 thq-body-small">
+                                <fragment class="contact-fragment18">
+                                  <span class="contact-text18 thq-body-small">
                                     Explore some of my featured projects.
                                   </span>
                                 </fragment>
@@ -255,8 +239,8 @@
                                 </fragment>
                               </span>
                               <span>
-                                <fragment class="contact-fragment20">
-                                  <span class="contact-text20 thq-body-small">
+                                <fragment class="contact-fragment19">
+                                  <span class="contact-text19 thq-body-small">
                                     Get in touch with me for collaborations or
                                     inquiries.
                                   </span>
@@ -268,18 +252,7 @@
                       </div>
                     </div>
                   </nav>
-                  <div class="navbar8-buttons2">
-                    <button class="thq-button-filled">
-                      <span>
-                        <fragment class="contact-fragment16">
-                          <span class="contact-text16">Toggle Dark Mode</span>
-                        </fragment>
-                      </span>
-                    </button>
-                    <button class="thq-button-outline">
-                      <span>Submit</span>
-                    </button>
-                  </div>
+                  <div class="navbar8-buttons2"></div>
                 </div>
                 <div class="navbar8-icon-group">
                   <svg
@@ -307,7 +280,7 @@
                 </div>
               </div>
             </header>
-            <div class="navbar8-container6"></div>
+            <div class="navbar8-container5"></div>
           </header>
         </navbar8-wrapper>
         <contact-form5-wrapper class="contact-form5-wrapper">
@@ -316,23 +289,23 @@
             <div class="thq-flex-column thq-section-max-width">
               <div class="contact-form5-section-title thq-flex-column">
                 <span>
-                  <fragment class="contact-fragment23">
-                    <span class="contact-text25 thq-body-small">
+                  <fragment class="contact-fragment22">
+                    <span class="contact-text24 thq-body-small">
                       Get in touch with us today!
                     </span>
                   </fragment>
                 </span>
                 <div class="contact-form5-content">
                   <h2>
-                    <fragment class="contact-fragment24">
-                      <span class="contact-text26 thq-heading-2">
+                    <fragment class="contact-fragment23">
+                      <span class="contact-text25 thq-heading-2">
                         Contact us
                       </span>
                     </fragment>
                   </h2>
                   <span>
-                    <fragment class="contact-fragment22">
-                      <span class="contact-text22 thq-body-small">
+                    <fragment class="contact-fragment21">
+                      <span class="contact-text21 thq-body-small">
                         <span>
                           We'd love to hear from you! Whether you have a
                           question, feedback, or need assistance with our
@@ -446,8 +419,8 @@
                   class="contact-form5-button thq-button-filled"
                 >
                   <span>
-                    <fragment class="contact-fragment21">
-                      <span class="contact-text21 thq-body-small">
+                    <fragment class="contact-fragment20">
+                      <span class="contact-text20 thq-body-small">
                         Send Message
                       </span>
                     </fragment>
@@ -464,18 +437,18 @@
               <div class="footer4-content">
                 <div class="footer4-links">
                   <a href="index.html" class="footer4-navlink1">
-                    <fragment class="contact-fragment25">
-                      <span class="contact-text27 thq-body-small">Home</span>
+                    <fragment class="contact-fragment24">
+                      <span class="contact-text26 thq-body-small">Home</span>
                     </fragment>
                   </a>
                   <a href="about.html" class="footer4-navlink2">
-                    <fragment class="contact-fragment26">
-                      <span class="contact-text28 thq-body-small">About</span>
+                    <fragment class="contact-fragment25">
+                      <span class="contact-text27 thq-body-small">About</span>
                     </fragment>
                   </a>
                   <a href="contact.html" class="footer4-navlink3">
-                    <fragment class="contact-fragment27">
-                      <span class="contact-text29 thq-body-small">Contact</span>
+                    <fragment class="contact-fragment26">
+                      <span class="contact-text28 thq-body-small">Contact</span>
                     </fragment>
                   </a>
                 </div>
@@ -488,22 +461,22 @@
                   </div>
                   <div class="footer4-footer-links">
                     <a href="index.html" class="footer4-text11">
-                      <fragment class="contact-fragment30">
-                        <span class="contact-text32 thq-body-small">
+                      <fragment class="contact-fragment29">
+                        <span class="contact-text31 thq-body-small">
                           Privacy Policy
                         </span>
                       </fragment>
                     </a>
                     <a href="index.html" class="footer4-text12">
-                      <fragment class="contact-fragment28">
-                        <span class="contact-text30 thq-body-small">
+                      <fragment class="contact-fragment27">
+                        <span class="contact-text29 thq-body-small">
                           Terms &amp; Conditions
                         </span>
                       </fragment>
                     </a>
                     <a href="index.html" class="footer4-text13">
-                      <fragment class="contact-fragment29">
-                        <span class="contact-text31 thq-body-small">
+                      <fragment class="contact-fragment28">
+                        <span class="contact-text30 thq-body-small">
                           Cookies Policy
                         </span>
                       </fragment>
