Update all fixes

--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,7 @@
                         </div>
                       </div>
                       <div class="navbar8-container4">
-                        <a href="https://www.teleporthq.io">
+                        <a href="mosababoidrees.github.io">
                           <div class="navbar8-menu-item1">
                             <img
                               alt="Image for Home"
@@ -177,7 +177,7 @@
                             </div>
                           </div>
                         </a>
-                        <a href="https://www.teleporthq.io">
+                        <a href="mosababoidrees.github.io">
                           <div class="navbar8-menu-item2">
                             <img
                               alt="Image for About"
@@ -202,7 +202,7 @@
                             </div>
                           </div>
                         </a>
-                        <a href="https://www.teleporthq.io">
+                        <a href="mosababoidrees.github.io">
                           <div class="navbar8-menu-item3">
                             <img
                               alt="Image for Portfolio"
@@ -223,7 +223,7 @@
                             </div>
                           </div>
                         </a>
-                        <a href="https://www.teleporthq.io">
+                        <a href="mosababoidrees.github.io">
                           <div class="navbar8-menu-item4">
                             <img
                               alt="Image for Contact"
