--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
                         </div>
                       </div>
                       <div class="navbar8-container4">
-                        <a href="https://www.teleporthq.io">
+                        <a href="mosababoidrees.github.io">
                           <div class="navbar8-menu-item1">
                             <img
                               alt="Image for Home"
@@ -175,7 +175,7 @@
                             </div>
                           </div>
                         </a>
-                        <a href="https://www.teleporthq.io">
+                        <a href="mosababoidrees.github.io">
                           <div class="navbar8-menu-item2">
                             <img
                               alt="Image for About"
@@ -200,7 +200,7 @@
                             </div>
                           </div>
                         </a>
-                        <a href="https://www.teleporthq.io">
+                        <a href="mosababoidrees.github.io">
                           <div class="navbar8-menu-item3">
                             <img
                               alt="Image for Portfolio"
@@ -221,7 +221,7 @@
                             </div>
                           </div>
                         </a>
-                        <a href="https://www.teleporthq.io">
+                        <a href="mosababoidrees.github.io">
                           <div class="navbar8-menu-item4">
                             <img
                               alt="Image for Contact"
